# CodeRenew

./: .env.development  .env.example  .env.production  .env.production.example  .env.staging  .env.staging.example  .env.staging.minimal  .gitignore  .mcp.json  .pre-commit-config.yaml  ARCHITECTURE.md  BACKEND_TEST_PLAN.md  CONTRIBUTING.md  CRITICAL_TEST_SCENARIOS.md  DEPLOYMENT.md  DEVOPS_SUMMARY.md  DISASTER_RECOVERY.md  DOCKER_DEPLOY_QUICK_START.md  DOCKER_EPSS_OPTIONAL_API_KEYS.md  DOCKER_STAGING_DEPLOY.md  EPSS_CODE_REVIEW.md  EPSS_IMPLEMENTATION_SUMMARY.md  EPSS_NEXT_STEPS.md  EPSS_REVIEW_OUTPUT.txt  EPSS_REVIEW_SUMMARY.md  EPSS_STAGING_DEPLOYMENT.md  EXECUTION_PLAN.md  FRONTEND_TEST_PLAN.md  GETTING_STARTED.md  HOW_TO_USE_MCP_TOOLS.md  IMPLEMENTATION_FILES.md  IMPROVEMENT_PLAN.md  Idées SaaS Code Renew.md  LANDING_PAGE_IMPLEMENTATION.md  LANDING_PAGE_SETUP.md  MCP_TOOLS_GUIDE.md  Makefile  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  PROJECT_TRACKING.md  (+16 more)
backend/: .env.example  Dockerfile  coverage.json  debug_import.py  pyproject.toml  requirements.txt  verify_email.py  verify_limits.py  verify_pdf.py
backend/alembic/: README  env.py
backend/alembic/versions/: 000_create_users_table.py  001_add_orders_table.py  002_add_user_onboarding_fields.py  003_add_password_reset_fields.py  004_add_account_lockout_fields.py  005_add_performance_indexes.py  006_add_user_plan_fields.py  007_add_epss_fields.py  008_add_webhook_tables.py
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/core/: cache.py  celery_app.py  circuit_breaker.py  config.py  exceptions.py  input_sanitization.py  password_policy.py  rate_limiting.py  security.py
backend/tests/: conftest.py  test_sprint1_features.py
(+182 files in other folders)
